# appservice-deployer

./: .gitignore  .pdm.toml  LICENSE  README.md  main.py  pyproject.toml  setup.py
appsrvdeployer/: __main__.py
appsrvdeployer/modules/: ftp.py  logger.py  provisioning.py  utils.py
src/appsrvdeployer/: __main__.py
src/appsrvdeployer/modules/: logger.py  provisioning.py  utils.py
