[project]
name = "appservice-deployer"
version = "v0.0.1"
description = ""
authors = [
    {name = "Fabio Felici", email = "fabio.felici96c@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
